[gd_scene load_steps=12 format=2]

[ext_resource path="res://gui/dialog/dialog_box.gd" type="Script" id=1]
[ext_resource path="res://gui/dialog/faces/toad/anger.png" type="Texture" id=2]
[ext_resource path="res://gui/dialog/boxes/neutral/neutral_name_edge.png" type="Texture" id=3]
[ext_resource path="res://gui/dialog/dialog_star_closed.png" type="Texture" id=4]
[ext_resource path="res://gui/dialog/dialog_star_open.png" type="Texture" id=5]
[ext_resource path="res://gui/dialog/boxes/neutral/neutral_edge.png" type="Texture" id=6]
[ext_resource path="res://gui/dialog/boxes/neutral/neutral_middle.png" type="Texture" id=7]
[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=8]
[ext_resource path="res://gui/sfx/back.wav" type="AudioStream" id=9]
[ext_resource path="res://gui/sfx/next.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "wait",
"speed": 5.0
} ]

[node name="DialogBox" type="Control"]
pause_mode = 1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2
script = ExtResource( 1 )

[node name="BlockLeft" type="ColorRect" parent="."]
anchor_right = 0.5
margin_left = 12.0
margin_right = -8.0
margin_bottom = 64.0
mouse_filter = 2
color = Color( 0.223529, 0.0941176, 0, 0.74902 )

[node name="EdgeLeft" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.74902 )
margin_left = -16.0
margin_right = 12.0
margin_bottom = 60.0
mouse_filter = 2
texture = ExtResource( 6 )

[node name="Name" type="Label" parent="EdgeLeft"]
margin_left = 29.0
margin_top = -13.0
margin_right = 56.0
margin_bottom = 2.0
custom_colors/font_color = Color( 0.819608, 0.705882, 0.768627, 1 )
custom_fonts/font = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlateLeft" type="TextureRect" parent="EdgeLeft/Name"]
modulate = Color( 1, 1, 1, 0.74902 )
show_behind_parent = true
margin_left = -2.0
margin_top = -3.0
margin_right = 2.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlateRight" type="TextureRect" parent="EdgeLeft/Name"]
modulate = Color( 1, 1, 1, 0.74902 )
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -3.0
margin_top = -3.0
margin_right = 1.0
margin_bottom = 13.0
mouse_filter = 2
texture = ExtResource( 3 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlateMiddle" type="ColorRect" parent="EdgeLeft/Name"]
show_behind_parent = true
anchor_right = 1.0
margin_left = 2.0
margin_top = -3.0
margin_right = -3.0
margin_bottom = 13.0
mouse_filter = 2
color = Color( 0.223529, 0.0941176, 0, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="EdgeLeft"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -56.0
margin_right = 60.0
margin_bottom = -8.0
mouse_filter = 2
texture = ExtResource( 2 )

[node name="Middle" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.74902 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockRight" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = -16.0
margin_bottom = 68.0
mouse_filter = 2
color = Color( 0.223529, 0.0941176, 0, 0.74902 )

[node name="EdgeRight" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.74902 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 64.0
mouse_filter = 2
texture = ExtResource( 6 )
flip_h = true

[node name="Star" type="AnimatedSprite" parent="EdgeRight"]
position = Vector2( 9.99976, 52 )
frames = SubResource( 7 )
animation = "wait"

[node name="Text" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 8.0
margin_top = 9.0
margin_right = -12.0002
margin_bottom = 57.0
mouse_filter = 2
custom_colors/default_color = Color( 0.976471, 0.909804, 0.909804, 1 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[node name="Next" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -15.0
bus = "SFX"

[node name="Close" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "SFX"
